--- a/MNIST.ipynb
+++ b/MNIST.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -20,16 +20,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This is an example on how to build a convolutional neural network (CNN) to recognize handwritten digits in the MNIST data set.\n",
+    "\n",
     "There are three main types of layers used to build a CNN: <b> Convolution Layer</b>, <b>Pooling Layer</b>, and <b>Fully-Connected Layer</b>\n",
     "\n",
     "### Convolution layer \n",
     "\n",
-    "The convolution layer extracts features from the input image. It consists of a set of filters. During the forward pass, we slide each filter across the width and height of the input image, preserving the depth of the input volume, and compute the dot products. \n",
+    "The convolution layer extracts features from the input image. It consists of a set of filters. During the forward pass, we slide each filter across the width and height of the input image preserving the depth of the input volume, and compute the dot products. \n",
     "\n",
     "Every image can be considered as a matrix of pixel values. Consider a 5x5 image whose pixel values are only 0 and 1 (for a grayscale image, the pixel values range from 0 to 255, the green matrix below is a special case). Also, consider another 3x3 matrix which is the filter. The convolution of the 5x5 image and the 3x3 filter can computed as shown in the animation below:   \n",
     "<img src=\"https://i.stack.imgur.com/I7DBr.gif\" style=\"width: 400px;\">\n",
     "\n",
-    "We can also specify the <b> stride </b>, and the <b>zero-padding</b>. The <b> stride </b> by default is 1, which results in the filter sliding by one pixel at a time. When the stride is 2, then the filter jumps two pixels at a time resulting in smaller output volumes. The <b>zero-padding</b> is used to pad the input volume with zeros around the border. This allows us to control the spatial size of the output volume. \n",
+    "Three parameters control the size of the output:\n",
+    "<ul>\n",
+    "<li><b>Depth</b>: Depth corresponds to the number of filters used for the convolution operation.\n",
+    "\n",
+    "<li><b>Stride</b>: Stride is the number of pixels by which we slide our filter matrix over the input matrix. By default, the <b> stride </b> is 1, which results in the filter sliding by one pixel at a time. When the stride is 2, then the filter jumps two pixels at a time resulting in smaller output volumes.\n",
+    "\n",
+    "<li><b>Zero-padding</b>: Zero-padding is used to pad the input volume with zeros around the border. This allows us to control the spatial size of the output volume.\n",
+    "</ul>\n",
     "\n",
     "### Non-Linear Layer (ReLU)\n",
     "\n",
@@ -45,24 +54,30 @@
     "\n",
     "### Fully Connected Layer\n",
     "\n",
-    "This layer is fully connected with the output of the previous layer. A weighted sum of the  input features followed by a bias offset is used for classification."
+    "This layer is fully connected with the output of the previous layer. This layer performs classification on the features extracted by the convolutional layer and downsampled by the pooling layer by using a weighted sum of the features followed by a bias offset.\n",
+    "\n",
+    "<img src=\"https://cdn-images-1.medium.com/max/1600/1*Kdnux0Kw1yQ4D8dq__mYCA.png\" style=\"width: 300px;\">"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'nn' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-ad87670ef524>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mModule\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconv1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mConv2d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconv2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mConv2d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'nn' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "Model (\n",
+       "  (conv1): Conv2d(1, 10, kernel_size=(5, 5), stride=(1, 1))\n",
+       "  (conv2): Conv2d(10, 20, kernel_size=(5, 5), stride=(1, 1))\n",
+       "  (fc1): Linear (320 -> 50)\n",
+       "  (fc2): Linear (50 -> 10)\n",
+       ")"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -89,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -109,14 +124,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Optimizer\n",
-    "\n",
-    "This updates the parameters based on the computed gradients. Here, we have used Stochastic Gradient Descent (SGD)."
+    "<b>Optimizer</b>: This updates the parameters based on the computed gradients. Here, we have used Stochastic Gradient Descent (SGD)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -127,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -138,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -164,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -184,58 +197,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Step: 0\tLoss: 2.326\n",
+      "Train Step: 0\tLoss: 2.294\n",
       "\n",
-      "Test set: Accuracy: 10.09%\n",
-      "Train Step: 1\tLoss: 2.314\n",
+      "Test set: Accuracy: 11.67%\n",
+      "Train Step: 1\tLoss: 2.308\n",
       "\n",
-      "Test set: Accuracy: 10.08%\n",
-      "Train Step: 2\tLoss: 2.306\n",
+      "Test set: Accuracy: 13.01%\n",
+      "Train Step: 2\tLoss: 2.269\n",
       "\n",
-      "Test set: Accuracy: 10.14%\n",
-      "Train Step: 3\tLoss: 2.298\n",
+      "Test set: Accuracy: 13.99%\n",
+      "Train Step: 3\tLoss: 2.275\n",
       "\n",
-      "Test set: Accuracy: 10.45%\n",
-      "Train Step: 4\tLoss: 2.304\n",
+      "Test set: Accuracy: 17.20%\n",
+      "Train Step: 4\tLoss: 2.260\n",
       "\n",
-      "Test set: Accuracy: 11.30%\n",
-      "Train Step: 5\tLoss: 2.288\n",
+      "Test set: Accuracy: 31.70%\n",
+      "Train Step: 5\tLoss: 2.224\n",
       "\n",
-      "Test set: Accuracy: 13.36%\n",
-      "Train Step: 6\tLoss: 2.284\n",
+      "Test set: Accuracy: 39.61%\n",
+      "Train Step: 6\tLoss: 2.236\n",
       "\n",
-      "Test set: Accuracy: 17.02%\n",
-      "Train Step: 7\tLoss: 2.290\n",
+      "Test set: Accuracy: 40.84%\n",
+      "Train Step: 7\tLoss: 2.191\n",
       "\n",
-      "Test set: Accuracy: 19.98%\n",
-      "Train Step: 8\tLoss: 2.280\n",
+      "Test set: Accuracy: 41.44%\n",
+      "Train Step: 8\tLoss: 2.148\n",
       "\n",
-      "Test set: Accuracy: 22.44%\n",
-      "Train Step: 9\tLoss: 2.264\n",
+      "Test set: Accuracy: 42.54%\n",
+      "Train Step: 9\tLoss: 1.974\n",
       "\n",
-      "Test set: Accuracy: 24.17%\n",
-      "Train Step: 10\tLoss: 2.257\n",
+      "Test set: Accuracy: 45.87%\n",
+      "Train Step: 10\tLoss: 1.896\n",
       "\n",
-      "Test set: Accuracy: 28.03%\n",
-      "Train Step: 11\tLoss: 2.248\n",
+      "Test set: Accuracy: 51.00%\n",
+      "Train Step: 11\tLoss: 1.891\n",
       "\n",
-      "Test set: Accuracy: 33.33%\n",
-      "Train Step: 12\tLoss: 2.244\n",
+      "Test set: Accuracy: 57.07%\n",
+      "Train Step: 12\tLoss: 1.695\n",
       "\n",
-      "Test set: Accuracy: 43.51%\n",
-      "Train Step: 13\tLoss: 2.197\n",
+      "Test set: Accuracy: 63.78%\n",
+      "Train Step: 13\tLoss: 1.343\n",
       "\n",
-      "Test set: Accuracy: 52.82%\n",
-      "Train Step: 14\tLoss: 2.120\n",
+      "Test set: Accuracy: 69.35%\n",
+      "Train Step: 14\tLoss: 1.511\n",
       "\n",
-      "Test set: Accuracy: 60.58%\n"
+      "Test set: Accuracy: 74.77%\n"
      ]
     }
    ],
