--- a/MNIST.ipynb
+++ b/MNIST.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is an example on how to build a convolutional neural network (CNN) to recognize handwritten digits in the MNIST data set."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is an example on how to build a convolutional neural network (CNN) to recognize handwritten digits in the MNIST data set.\n",
+    "## Convolutional Neural Network\n",
     "\n",
     "There are three main types of layers used to build a CNN: <b> Convolution Layer</b>, <b>Pooling Layer</b>, and <b>Fully-Connected Layer</b>\n",
     "\n",
@@ -61,21 +68,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Model (\n",
-       "  (conv1): Conv2d(1, 10, kernel_size=(5, 5), stride=(1, 1))\n",
-       "  (conv2): Conv2d(10, 20, kernel_size=(5, 5), stride=(1, 1))\n",
-       "  (fc1): Linear (320 -> 50)\n",
-       "  (fc2): Linear (50 -> 10)\n",
+       "  (conv1): Conv2d(1, 32, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
+       "  (conv2): Conv2d(32, 64, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
+       "  (fc1): Linear (3136 -> 1024)\n",
+       "  (fc2): Linear (1024 -> 10)\n",
        ")"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,15 +91,15 @@
     "class Model(nn.Module):\n",
     "  def __init__(self):\n",
     "    super(Model, self).__init__()\n",
-    "    self.conv1 = nn.Conv2d(1, 10, 5)\n",
-    "    self.conv2 = nn.Conv2d(10, 20, 5)\n",
-    "    self.fc1 = nn.Linear(320, 50)\n",
-    "    self.fc2 = nn.Linear(50, 10)\n",
+    "    self.conv1 = nn.Conv2d(1, 32, 5, padding=2)\n",
+    "    self.conv2 = nn.Conv2d(32, 64, 5, padding=2)\n",
+    "    self.fc1 = nn.Linear(64*7*7, 1024)\n",
+    "    self.fc2 = nn.Linear(1024, 10)\n",
     "\n",
     "  def forward(self, x):\n",
     "    x = F.relu(F.max_pool2d(self.conv1(x), 2))\n",
     "    x = F.relu(F.max_pool2d(self.conv2(x), 2))\n",
-    "    x = x.view(-1, 320)\n",
+    "    x = x.view(-1, 64*7*7)\n",
     "    x = F.relu(self.fc1(x))\n",
     "    x = F.dropout(x, training=self.training)\n",
     "    x = self.fc2(x)\n",
@@ -103,8 +110,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We load the training and test data from the MNIST dataset."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -124,12 +138,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Optimizer</b>: This updates the parameters based on the computed gradients. Here, we have used Stochastic Gradient Descent (SGD)."
+    "<b>Optimizer:</b> This updates the parameters based on the computed gradients. Here, we have used Stochastic Gradient Descent (SGD)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -139,8 +153,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Loss Function:</b> For training and evaluation, we have to define a loss function that measures how closely the model's predictions match the target classes."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -151,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -171,13 +192,13 @@
     "    loss.backward()\n",
     "    optimizer.step()\n",
     "    if i % 1000 == 0:\n",
-    "      print('Train Step: {}\\tLoss: {:.3f}'.format(epoch, loss.data[0]))\n",
+    "      print('\\nTrain Step: {}\\tLoss: {:.3f}'.format(epoch, loss.data[0]))\n",
     "    i += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -192,63 +213,63 @@
     "    prediction = output.data.max(1)[1]\n",
     "    correct += prediction.eq(target.data).sum()\n",
     "\n",
-    "  print('\\nTest set: Accuracy: {:.2f}%'.format(100. * correct / len(test_loader.dataset)))"
+    "  print('Test set: Accuracy: {:.2f}%'.format(100. * correct / len(test_loader.dataset)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Step: 0\tLoss: 2.294\n",
+      "Train Step: 0\tLoss: 2.289\n",
       "\n",
-      "Test set: Accuracy: 11.67%\n",
-      "Train Step: 1\tLoss: 2.308\n",
+      "Test set: Accuracy: 24.83%\n",
+      "Train Step: 1\tLoss: 2.268\n",
       "\n",
-      "Test set: Accuracy: 13.01%\n",
-      "Train Step: 2\tLoss: 2.269\n",
+      "Test set: Accuracy: 37.09%\n",
+      "Train Step: 2\tLoss: 2.254\n",
       "\n",
-      "Test set: Accuracy: 13.99%\n",
-      "Train Step: 3\tLoss: 2.275\n",
+      "Test set: Accuracy: 49.42%\n",
+      "Train Step: 3\tLoss: 2.188\n",
       "\n",
-      "Test set: Accuracy: 17.20%\n",
-      "Train Step: 4\tLoss: 2.260\n",
+      "Test set: Accuracy: 58.45%\n",
+      "Train Step: 4\tLoss: 2.116\n",
       "\n",
-      "Test set: Accuracy: 31.70%\n",
-      "Train Step: 5\tLoss: 2.224\n",
+      "Test set: Accuracy: 65.52%\n",
+      "Train Step: 5\tLoss: 1.998\n",
       "\n",
-      "Test set: Accuracy: 39.61%\n",
-      "Train Step: 6\tLoss: 2.236\n",
+      "Test set: Accuracy: 70.11%\n",
+      "Train Step: 6\tLoss: 1.648\n",
       "\n",
-      "Test set: Accuracy: 40.84%\n",
-      "Train Step: 7\tLoss: 2.191\n",
+      "Test set: Accuracy: 72.65%\n",
+      "Train Step: 7\tLoss: 1.211\n",
       "\n",
-      "Test set: Accuracy: 41.44%\n",
-      "Train Step: 8\tLoss: 2.148\n",
+      "Test set: Accuracy: 77.72%\n",
+      "Train Step: 8\tLoss: 0.850\n",
       "\n",
-      "Test set: Accuracy: 42.54%\n",
-      "Train Step: 9\tLoss: 1.974\n",
+      "Test set: Accuracy: 81.59%\n",
+      "Train Step: 9\tLoss: 0.868\n",
       "\n",
-      "Test set: Accuracy: 45.87%\n",
-      "Train Step: 10\tLoss: 1.896\n",
+      "Test set: Accuracy: 83.75%\n",
+      "Train Step: 10\tLoss: 0.512\n",
       "\n",
-      "Test set: Accuracy: 51.00%\n",
-      "Train Step: 11\tLoss: 1.891\n",
+      "Test set: Accuracy: 85.32%\n",
+      "Train Step: 11\tLoss: 0.672\n",
       "\n",
-      "Test set: Accuracy: 57.07%\n",
-      "Train Step: 12\tLoss: 1.695\n",
+      "Test set: Accuracy: 86.81%\n",
+      "Train Step: 12\tLoss: 0.386\n",
       "\n",
-      "Test set: Accuracy: 63.78%\n",
-      "Train Step: 13\tLoss: 1.343\n",
+      "Test set: Accuracy: 88.04%\n",
+      "Train Step: 13\tLoss: 0.790\n",
       "\n",
-      "Test set: Accuracy: 69.35%\n",
-      "Train Step: 14\tLoss: 1.511\n",
+      "Test set: Accuracy: 88.84%\n",
+      "Train Step: 14\tLoss: 0.337\n",
       "\n",
-      "Test set: Accuracy: 74.77%\n"
+      "Test set: Accuracy: 89.41%\n"
      ]
     }
    ],
