--- a/MNIST.ipynb
+++ b/MNIST.ipynb
@@ -29,11 +29,13 @@
    "source": [
     "## Convolutional Neural Network\n",
     "\n",
-    "There are three main types of layers used to build a CNN: <b> Convolution Layer</b>, <b>Pooling Layer</b>, and <b>Fully-Connected Layer</b>\n",
+    "Convolutional neural networks take biological inspiration from the animal visual cortex. The visual cortex consists of a complex arrangement of cells. These cells are sensitive to specific regions of the visual field, called a receptive field. The different receptive fields partially overlap such that they cover the entire visual field. CNNs use this idea of specialized components having specific tasks similar to how neurons in the visual cortex look for specific characteristics.\n",
+    "\n",
+    "In a CNN, an input in passed through a series of <b>convolution layers</b>, <b>nonlinear layers</b>, <b>pooling layers</b>, and <b>fully-connected layers</b>, and we get an output. In image classification, the input is an image that can be represented as an array of pixel values, and t eoutput can be single class or a probability of classes that best describe the image. \n",
     "\n",
     "### Convolution layer \n",
     "\n",
-    "The convolution layer extracts features from the input image. It consists of a set of filters. During the forward pass, we slide each filter across the width and height of the input image preserving the depth of the input volume, and compute the dot products. \n",
+    "The first layer in a CNN is the convolutional layer. This layer extracts features, such as edges, curves, etc., from the input image. It consists of a set of filters. We slide each filter across the width and height of the input image, computing element vise multiplications of the values in the filter and the original pixel values in the input. The multiplications are summed up, and the process is repeated by moving the filter to the right on the input volume. The output produced by sliding the filter over all the locations is called an activation or feature map. The depth of the output array is the same as the depth of the input array.\n",
     "\n",
     "Every image can be considered as a matrix of pixel values. Consider a 5x5 image whose pixel values are only 0 and 1 (for a grayscale image, the pixel values range from 0 to 255, the green matrix below is a special case). Also, consider another 3x3 matrix which is the filter. The convolution of the 5x5 image and the 3x3 filter can computed as shown in the animation below:   \n",
     "<img src=\"https://i.stack.imgur.com/I7DBr.gif\" style=\"width: 400px;\">\n",
